--- a/speedup/discogs.conf
+++ b/speedup/discogs.conf
@@ -1,9 +1,9 @@
 [DATABASE]
 host=127.0.0.1
-port=5432
+port=5433
 name=discogs
 user=discogs
 password=test
 
 [schemas]
-discogs=discogs
+discogs=public
